# strongswan

./: README_QRYPT.md  configure.ac  install-config  strongswan.spec
conf/: Makefile.am
conf/plugins/: blast.opt  doca.opt  quantum_entropy.opt
debian/: changelog  control  copyright  rules  strongswan.postinst  strongswan.prerm
init/systemd/: strongswan.service.in
mlnx-conf/: BFL.swanctl.conf  BFR.swanctl.conf
openssl-conf/CentOS8/: openssl.cnf
openssl-conf/Ubuntu22_04/: openssl.cnf
scripts/: Makefile.am
src/libcharon/: Makefile.am
src/libcharon/plugins/doca/: Makefile.am  doca_plugin.c  doca_plugin.h  doca_plugin_ipsec.c  doca_plugin_ipsec.h
src/libcharon/plugins/kernel_netlink/: kernel_netlink_ipsec.c
src/libcharon/plugins/vici/: vici_config.c
src/libstrongswan/ipsec/: ipsec_types.h
src/libstrongswan/plugins/blast/: Makefile  blast.conf  blast_ke.c  blast_ke.h  blast_plugin.c  blast_plugin.h  qryptsecurity_c.h
src/libstrongswan/plugins/openssl/: openssl_engine.c  openssl_plugin.c
src/libstrongswan/plugins/quantum_entropy/: Makefile  base64.c  curl_base64.h  quantum_entropy.conf  quantum_entropy_plugin.c  quantum_entropy_plugin.h  quantum_entropy_rng.c  quantum_entropy_rng.h
